[package]
name = "gridsim"
version = "0.5.1-alpha.0"
edition = "2018"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
description = "A library for running simulations on grids"
documentation = "https://docs.rs/gridsim/"
license = "MIT"
repository = "https://github.com/evomata/gridsim"

[features]
default = ["rayon"]

[dependencies]
rayon = { version = "1.5.0", optional = true }
float-ord = "0.2.0"
enum-iterator = "0.6.0"
ndarray = { version = "0.14.0", default-features = false, features = ["rayon"] }
