[package]
name = "gridsim"
version = "0.6.1-alpha.0"
edition = "2018"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
description = "A library for running simulations on grids"
documentation = "https://docs.rs/gridsim/"
license = "MIT"
repository = "https://github.com/evomata/gridsim"

[features]
default = ["use-rayon"]
use-rayon = ["ndarray/rayon"]

[dependencies]
ndarray = { version = "0.14.0", default-features = false }
